[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://UI/Inventory/GenericInventoryEntry.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.290196, 0.364706, 0.623529, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0, 0.054902, 0.286275, 1 )
border_blend = true
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="GenericInventoryScreen" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.054902, 0, 0.301961, 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.0313726, 0, 0.172549, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control" type="MarginContainer" parent="HBoxContainer"]
margin_right = 1231.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Info" type="HBoxContainer" parent="HBoxContainer/Control"]
margin_right = 1231.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Control/Info"]
margin_right = 64.0
margin_bottom = 720.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Panel" type="Panel" parent="HBoxContainer/Control/Info/TextureRect"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 3 )

[node name="VSeparator" type="VSeparator" parent="HBoxContainer/Control/Info"]
margin_left = 68.0
margin_right = 72.0
margin_bottom = 720.0

[node name="Label" type="Label" parent="HBoxContainer/Control/Info"]
margin_left = 76.0
margin_right = 1231.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Test Item"
valign = 1
autowrap = true

[node name="SelectButton" type="TextureButton" parent="HBoxContainer/Control"]
margin_right = 1231.0
margin_bottom = 720.0

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 1235.0
margin_right = 1280.0
margin_bottom = 720.0

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer/HBoxContainer"]
margin_right = 4.0
margin_bottom = 720.0

[node name="InteractButtonsList" type="HBoxContainer" parent="HBoxContainer/HBoxContainer"]
margin_left = 8.0
margin_right = 45.0
margin_bottom = 720.0

[node name="InteractButton" type="Button" parent="HBoxContainer/HBoxContainer/InteractButtonsList"]
margin_right = 37.0
margin_bottom = 720.0
text = "Use"

[connection signal="pressed" from="HBoxContainer/Control/SelectButton" to="." method="_on_SelectButton_pressed"]
